<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SecondStepActivity">

    <TextView
        android:id="@+id/title_second_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="151dp"
        android:text="@string/you_re_almost_there"
        android:textColor="@color/blue_prime"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/desccc"
        android:layout_width="312dp"
        android:layout_height="34dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/fill_out_the_form_below_or_scan_your_id_to_automatically_fill_the_form"
        android:textColor="@color/grey"
        android:layout_marginTop="253dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_nik"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="303dp"
        app:layout_constraintEnd_toEndOf="@+id/desccc"
        app:layout_constraintStart_toStartOf="@+id/desccc"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nik"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/nik"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_nik"
        app:layout_constraintStart_toStartOf="@+id/edit_text_nik"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_nik">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/name"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_prov"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_name"
        app:layout_constraintStart_toStartOf="@+id/edit_text_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/prov"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/province"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_region"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_prov"
        app:layout_constraintStart_toStartOf="@+id/edit_text_prov"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_prov">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/region"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/region"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_region"
        app:layout_constraintStart_toStartOf="@+id/edit_text_region"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_region">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/address"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:drawableStart="@drawable/camera"
        android:paddingLeft="125dp"
        android:paddingRight="125dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_btn_outline"
        android:text="@string/scan_your_id"
        android:textAllCaps="false"
        android:textColor="@color/blue_prime"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edit_text_address"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_address" />

    <TextView
        android:id="@+id/dessscc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/automatcally_fill_the_form_after_scanning_your_id"
        android:textColor="@color/grey"
        android:layout_marginTop="13dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_continue"
        app:layout_constraintStart_toStartOf="@+id/btn_continue"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue" />

</androidx.constraintlayout.widget.ConstraintLayout>