<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <TextView
        android:id="@+id/title_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="151dp"
        android:textSize="24sp"
        android:textColor="@color/blue_prime"/>

    <TextView
        android:id="@+id/desc_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_sign_you_up"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/title_signIn"
        app:layout_constraintStart_toStartOf="@+id/title_signIn"
        app:layout_constraintTop_toBottomOf="@+id/title_signIn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="303dp"
        app:layout_constraintEnd_toEndOf="@+id/desc_signUp"
        app:layout_constraintStart_toStartOf="@+id/desc_signUp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="366dp"
            android:layout_height="59dp"
            android:hint="@string/email"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
        app:layout_constraintStart_toStartOf="@+id/edit_text_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="366dp"
            android:textSize="14sp"
            android:layout_height="59dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_repeat_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat_pass"
            android:hint="@string/repeat_password"
            android:layout_width="366dp"
            android:textSize="14sp"
            android:layout_height="59dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="366dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="17dp"
        android:text="@string/continueee"
        android:drawableEnd="@drawable/ic_vector"
        android:paddingRight="140dp"
        android:paddingLeft="140dp"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:background="@drawable/background_btn"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_repeat_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_repeat_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_repeat_password" />

    <TextView
        android:id="@+id/desccc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_to_scan_your_id_to_complete_the_registration"
        android:textColor="@color/grey"
        android:layout_marginTop="13dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_continue"
        app:layout_constraintStart_toStartOf="@+id/btn_continue"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue" />

</androidx.constraintlayout.widget.ConstraintLayout>